# kwin-effect-grayscale

./: .gitignore  CMakeLists.txt  README.md
archlinux/: PKGBUILD
src/: CMakeLists.txt  GrayscaleEffect.cpp  GrayscaleEffect.h  grayscale.desktop  plugin.cpp  shaders.qrc
src/data/1.10/: gray.frag
src/data/1.40/: gray.frag
src/kcm/: CMakeLists.txt  grayscale_config.cpp  grayscale_config.desktop  grayscale_config.h
